# santa-racer-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
assets/data/: chimneys.txt  fontCharacterWidths.txt  foregroundObjectMap.txt  levelTileMap.txt
original/: LICENSE.NikolausExpress2000.md
src/: asset.rs  assets.rs  fg_objects.rs  game.rs  gift.rs  level.rs  main.rs  npc.rs  options.rs  sdl.rs  sleigh.rs  ui.rs
tools/: createRelease.py  extractAssets.py  installSdlForWindows.py
