[package]
name = "santa-racer"
version = "1.0.2"
authors = ["Julian Valentin <julian.valentin@bsplines.org>"]
edition = "2018"
build = "build.rs"

[dependencies]
confy = "0.4.0"
rand = "0.7.3"

[dependencies.sdl2]
version = "0.34.3"
default-features = false
features = ["image", "mixer"]

[dependencies.serde]
version = "1.0.116"
features = ["derive"]
